# mrpack-container

./: .gitignore  Cargo.toml  README.md
.github/workflows/: e2e.yaml  lint.yaml
src/: adoptium.rs  arch.rs  deb.rs  download.rs  fabric.rs  hash_writer.rs  layer.rs  main.rs  mojang.rs  packfile.rs
src/modloaders/: fabric.rs  forge.rs  mod.rs  quilt.rs
src/oci_blob/: json.rs  layer.rs  mod.rs
tests/mrpacks/: fabric-simple.mrpack  quilt-simple.mrpack
