[package]
name = "mrpack-container"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
hex = { version = "0.4.2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "0.6.3"
anyhow = "1.0.68"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.24.2", features = ["full"] }
thiserror = "1.0.38"
futures-util = "0.3.25"
regex = "1.10.2"
oci-distribution = "0.10.0"
tar = "0.4.40"
digest = "0.10.7"
sha2 = "0.10.8"
sha1 = "0.10.6"
async-compression = { version = "0.4.8", features = ["tokio", "gzip", "xz", "lzma", "zlib", "zstd"] }
tokio-util = "0.7.10"
futures = "0.3.30"
rand = "0.8.5"
pin-project-lite = "0.2.14"
