[package]
name = "mrpack-container"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
async-compression = { version = "0.4.8", features = ["tokio", "gzip", "xz", "lzma", "zlib", "zstd"] }
clap = { version = "4.1.1", features = ["derive"] }
digest = "0.10.7"
futures = "0.3.30"
futures-util = "0.3.25"
hex = { version = "0.4.2", features = ["serde"] }
oci-distribution = "0.10.0"
pin-project-lite = "0.2.14"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sha1 = "0.10.6"
sha2 = "0.10.8"
tar = "0.4.40"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.3.1", features = ["serde"] }
zip = "0.6.3"
