[package]
name = "mrpack-container"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip", "xz"] }
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
clap = { version = "4.5", features = ["derive"] }
digest = "0.10"
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
oci-distribution = "0.11"
pin-project-lite = "0.2"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }
